manifests/flume-statefulset.yaml
# A headless service to create DNS records
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              flume
spec:
  serviceName:                       flume
  template:
    metadata:
      labels:
        component:                   flume
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        flume
        imagePullPolicy:             Always
        image:                       yswtrue/hadoop:2.7.6
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "4000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
