manifests/hdfs-dn-statefulset.yaml
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              hdfs-dn
spec:
  serviceName:                       "hdfs-dn"
  replicas:                          1
  template:
    metadata:
      labels:
        component:                   hdfs-dn
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        hdfs-dn
        image:                       yswtrue/hadoop:2.7.6
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "1000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
          - name:                    data
            mountPath:               /root/hdfs
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
  volumeClaimTemplates:
  - metadata:
      name:                          data
    spec:
      accessModes:                   [ "ReadWriteOnce" ]
      storageClassName:              "nfs"
      resources:
        requests:
          storage:                   200Gi
