manifests/hive-statefulset.yaml
# A headless service to create DNS records
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              hive
  namespace:                         yarn-cluster
  labels:
    component:                       hive
spec:
  ports:
  - name:                            hive
    port:                            10000
    protocol:                        TCP
  # *.hive.yarn-cluster.svc.cluster.local
  type:                              NodePort
  selector:
    component:                       hive
---
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              hive
spec:
  serviceName:                       hive
  template:
    metadata:
      labels:
        component:                   hive
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        hive
        image:                       yswtrue/hadoop:2.7.6
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "4000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
