manifests/hdfs-nn-statefulset.yaml
# A headless service to create DNS records
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              hdfs-nn
  namespace:                         yarn-cluster
  labels:
    component:                       hdfs-nn
spec:
  ports:
  - name:                            dfs
    port:                            9000
    protocol:                        TCP
  # *.hdfs-nn.yarn-cluster.svc.cluster.local
  clusterIP:                         None
  selector:
    component:                       hdfs-nn
---
# Service to access the yarn web ui
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              hdfs-ui
  namespace:                         yarn-cluster
  labels:
    component:                       hdfs-nn
spec:
  ports:
  - port:                            50070
    name:                            web
  type:                              NodePort
  selector:
    component:                       hdfs-nn
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
  name:                              hdfs-ui
spec:
  rules:
    - host:                          hdfsui.k8s
      http:
        paths:
          - backend:
              serviceName:           hdfs-ui
              servicePort:           50070
---
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              hdfs-nn
spec:
  serviceName:                       "hdfs-nn"
  replicas:                          1
  template:
    metadata:
      labels:
        component:                   hdfs-nn
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        hdfs-nn
        image:                       yswtrue/hadoop:2.7.6
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "1000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
          - name:                    data
            mountPath:               /root/hdfs
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nfs"
      resources:
        requests:
          storage: 200Gi
