manifests/mr-history-statefulset.yaml
# Service to access the yarn web ui
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              mr-history
  namespace:                         yarn-cluster
  labels:
    component:                       mr-history
spec:
  ports:
  - port:                            80
    name:                            web
  selector:
    component:                       mr-history
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
  name:                              mr-history
spec:
  rules:
    - host:                          mr-history
      http:
        paths:
          - backend:
              serviceName:           mr-history
              servicePort:           80
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
    name:                            mr-history
spec:
    rules:
        - host:                      mr-history
          http:
            paths:
              - backend:
                  serviceName:       mr-history
                  servicePort:       80
---
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              mr-history
spec:
  serviceName:                       "mr-history"
  replicas:                          1
  template:
    metadata:
      labels:
        component:                   mr-history
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        mr-history
        image:                       yswtrue/hadoop:2.7.6
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "2000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
