manifests/spark-history-deployment.yaml
# Service to access the yarn web ui
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              spark-history
  namespace:                         yarn-cluster
  labels:
    component:                       spark-history
spec:
  ports:
  - port:                            7777
    name:                            web
  type:                              NodePort
  selector:
    component:                       spark-history
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
  name:                              spark-history
spec:
  rules:
    - host:                          sparkhistory.k8s
      http:
        paths:
          - backend:
              serviceName:           spark-history
              servicePort:           7777
---
apiVersion:                          apps/v1beta1
kind:                                Deployment
metadata:
  name:                              spark-history
spec:
  replicas:                          1
  template:
    metadata:
      labels:
        component:                   spark-history
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        spark-history
        image:                       yswtrue/hadoop:2.7.6
        ports:
        - containerPort:             7777
          name:                      web
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "2000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
