manifests/yarn-nm-statefulset.yaml
# A headless service to create DNS records
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              yarn-nm
  namespace:                         yarn-cluster
  labels:
    component:                       yarn-nm
spec:
  ports:
  - port:                            8088
    name:                            web
  - port:                            8082
    name:                            web2
  # *.yarn-nm.yarn-cluster.svc.cluster.local
  clusterIP:                         None
  selector:
    component:                       yarn-nm
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
  name:                              yarn-nm
spec:
  rules:
    - host:                          yarn-nm
      http:
        paths:
          - backend:
              serviceName:           yarn-nm
              servicePort:           8088
---
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              yarn-nm
spec:
  serviceName:                       "yarn-nm"
  replicas:                          2
  template:
    metadata:
      labels:
        component:                   yarn-nm
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        yarn-nm
        imagePullPolicy:             Always
        image:                       yswtrue/hadoop:2.7.6
        ports:
        - containerPort:             8088
          name:                      web
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "4000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
