manifests/yarn-rm-statefulset.yaml
# Service to access the yarn web ui
apiVersion:                          v1
kind:                                Service
metadata:
  name:                              yarn-ui
  namespace:                         yarn-cluster
  labels:
    component:                       yarn-ui
spec:
  ports:
  - port:                            80
    name:                            web
  selector:
    component:                       yarn-rm
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
  name:                              yarn-ui
spec:
  rules:
    - host:                          yarn-ui
      http:
        paths:
          - backend:
              serviceName:           yarn-ui
              servicePort:           80
---
apiVersion:                          extensions/v1beta1
kind:                                Ingress
metadata:
    name:                            yarn-rm
spec:
    rules:
        - host:                      yarn-rm
          http:
            paths:
              - backend:
                  serviceName:       yarn-rm
                  servicePort:       80
---
apiVersion:                          apps/v1beta1
kind:                                StatefulSet
metadata:
  name:                              yarn-rm
spec:
  serviceName:                       "yarn-rm"
  replicas:                          1
  template:
    metadata:
      labels:
        component:                   yarn-rm
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name:                        yarn-rm
        image:                       yswtrue/hadoop:2.7.6
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory:                  "1024Mi"
            cpu:                     "100m"
          limits:
            memory:                  "2048Mi"
            cpu:                     "2000m"
        volumeMounts:
          - name:                    hadoop-config
            mountPath:               /tmp/hadoop-config
      volumes:
        - name:                      hadoop-config
          configMap:
            name:                    hadoop-config
